--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ rootProject.name = 'blink-gift'
 include 'core-processor'
 include 'onchain-indexer'
 include 'getgems-parser'
+include 'gift-discovery'
