--- a/core-processor/build.gradle
+++ b/core-processor/build.gradle
@@ -29,20 +29,22 @@ configurations {
 }
 
 dependencies {
-    implementation 'io.github.openfeign:feign-okhttp'
-    implementation 'commons-codec:commons-codec:1.16.0'
-    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
-    compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'org.postgresql:postgresql'
-    annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    // Web & Data
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
-    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+
+    // Tools
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
-    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+    implementation 'io.github.openfeign:feign-okhttp'
+    implementation 'commons-codec:commons-codec:1.16.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
+
+    // Lombok
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    // Test
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 
