--- a/getgems-parser/src/main/resources/application.yml
+++ b/getgems-parser/src/main/resources/application.yml
@@ -8,12 +8,10 @@ spring:
     openfeign:
       okhttp:
         enabled: true
-      httpclient:
-        enabled: false
   task:
     scheduling:
       pool:
-        size: 5  # Укажи число, достаточное для всех твоих @Scheduled задач
+        size: 5
       thread-name-prefix: scheduled-task-
 
 server:
@@ -21,16 +19,14 @@ server:
   error:
     include-stacktrace: always
 
+# Выносим настройки сюда
+getgems:
+  api-key: "1767696328881-mainnet-10772317-r-JZxQ9TmGu7URUGscDZjznrMzVtNBcCpVlOTgsFx9t8Xv8c4o"
+  proxy:
+    host: "127.0.0.1"
+    port: 8000
+    enabled: true
+
 logging:
   level:
     com.ceawse.blinkgift: INFO
-    org.springframework.web: INFO
-    org.apache.coyote: INFO
-
-feign:
-  client:
-    config:
-      default:
-        connectTimeout: 5000
-        readTimeout: 10000
-        loggerLevel: basic
