--- a/gift-discovery/src/main/resources/application.yml
+++ b/gift-discovery/src/main/resources/application.yml
@@ -22,6 +22,10 @@ logging:
     org.springframework.web: INFO
     org.apache.coyote: INFO
 
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
+    file: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
+
 feign:
   client:
     config:
